welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:2: error: Missing closing brace `}' assumed here
def doghouse() { for (i<-1 to 4 {avance()
^